--- a/Question_11_20/answers_cpp/Makefile
+++ b/Question_11_20/answers_cpp/Makefile
@@ -9,11 +9,11 @@ OBJS = ${PROGRAM}.o ${MYCV}.o
 PATH_MYCV = ../../common/${MYCV}.cpp
 
 # c++でPython3を使用する際に、以下を有効にする。
-# INCLUDES = -I/usr/include/python3.7
+INCLUDES = -I/usr/include/python3.8
 
-LIBS = -lopencv_core -lopencv_imgcodecs -lopencv_highgui
 # c++でPython3を使用する際に、上のLIBSを無効にし、以下を有効にする。
-# LIBS = -lopencv_core -lopencv_imgcodecs -lopencv_highgui -lpython3.7
+# LIBS = -lopencv_core -lopencv_imgcodecs -lopencv_highgui
+LIBS = -lopencv_core -lopencv_imgcodecs -lopencv_highgui -lpython3.8
 
 .PHONY: all
 all: $(PROGRAM)
